@@ -56,6 +56,7 @@ setup(name=name, version=version, description=description,
           'isodate',
           'mock',
           'ordereddict',
+          'plone.api',
           'plone.app.dexterity [grok]',
           'plone.app.referenceablebehavior',
           'plone.app.z3cform>=0.7.6',
